[UPDATE] Updated board style and background image. Init Card component.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,4 @@
-body {
-  background-image: url('https://raw.githubusercontent.com/GCnomore/website-portfolio/master/img/backgrounds/andre-benz-wkhyXI5hRbo-unsplash.webp');
+.appContainer {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50%;
