--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -1,17 +1,47 @@
 .boardWrapper {
-  padding-top: 15%;
+  padding-top: 20vh;
+}
+
+a {
+  cursor: pointer;
 }
 
 .boardList {
   width: 18rem;
-  background-color: antiquewhite;
-  margin: 0 0.75rem 0 0.25rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(1.5px);
+  margin: 0 0.75rem 0 0.75rem;
   padding: 0.5rem;
   border-radius: 0.5rem;
+  color: white;
+  font-weight: 500;
 }
 
 .listItems {
   padding: 0.5rem;
   margin: 0.75rem 0 0.75rem 0;
-  background-color: rgb(253, 246, 238);
+  background-color: rgba(102, 101, 99, 0.568);
+  backdrop-filter: blur(1.5px);
+  border-radius: 0.25rem;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.listItems:hover {
+  filter: brightness(70%);
+  transition: 0.75s;
+}
+
+.listHeader {
+  height: 5vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.listTitle {
+  height: 100%;
+  text-align: center;
+  font-weight: 600;
+  font-size: 1.5rem;
 }
