--- a/src/styles/Board.css
+++ b/src/styles/Board.css
@@ -20,7 +20,7 @@ a {
 }
 
 .boardList {
-  width: 18rem;
+  min-width: 18rem;
   height: fit-content;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(1.5px);
